[gd_scene load_steps=6 format=3 uid="uid://6rs0atg83bvx"]

[ext_resource type="Script" path="res://scripts/tower.gd" id="1_sp6mh"]
[ext_resource type="Script" path="res://tools/shape/shape_draw_2d.gd" id="1_vn805"]
[ext_resource type="PackedScene" uid="uid://cdccctakfe58v" path="res://scenes/components/FiringComponent.tscn" id="3_euv13"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s0b8w"]

[sub_resource type="CircleShape2D" id="CircleShape2D_o5sah"]
radius = 200.0

[node name="tower" type="StaticBody2D"]
script = ExtResource("1_sp6mh")

[node name="base shape" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_s0b8w")

[node name="ShapeDraw2D" type="Node2D" parent="base shape"]
script = ExtResource("1_vn805")

[node name="top shape" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-5, 5, -5, -5, 6, 0)

[node name="ShapeDraw2D" type="Node2D" parent="top shape"]
script = ExtResource("1_vn805")
color = Color(0, 0, 0, 1)

[node name="firing_component" parent="top shape" instance=ExtResource("3_euv13")]
position = Vector2(2, 0)
scale = Vector2(0.533333, 0.533333)

[node name="tower-range" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="tower-range"]
shape = SubResource("CircleShape2D_o5sah")

[connection signal="body_entered" from="tower-range" to="." method="_on_towerrange_body_entered"]
[connection signal="body_exited" from="tower-range" to="." method="_on_towerrange_body_exited"]
